Create new trip

--- a/app/views/trips/index.erb
+++ b/app/views/trips/index.erb
@@ -1,3 +1,5 @@
+<!-- Shows all users trips to logged in user -->
+<h1>All Users Trips</h1>
 <% @trips.each do |trip| %>
     <p><%= trip.country %></p>
     <p><%= trip.city %></p>
