--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -11,9 +11,11 @@
 </head>
 
 <body>
-    <h1>Welcome (from layout.erb)</h1>
+    <h1>Heading (from layout.erb)</h1>
     <% if logged_in? %>
-      <a href="/trips">Trips</a>
+      <a href="/trips">All Trips</a>
+      <a href="/<%= current_user.id %>/trips">Your Trips</a>
+      <a href="/trips/new">New Trip</a>
      <% end %> 
     <%= yield %>
 </body>
