Edit information displayed

--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -16,6 +16,8 @@
       <a href="/trips">All Trips</a>
       <a href="/<%= current_user.id %>/trips">Your Trips</a>
       <a href="/trips/new">New Trip</a>
+      <a href="/logout">Logout</a>
+
      <% end %> 
     <%= yield %>
 </body>
