--- a/app/views/trips/index.erb
+++ b/app/views/trips/index.erb
@@ -6,7 +6,7 @@
     <p><%= trip.date_visited %></p>
     <p><%= trip.category %></p>
     <% trip.highlights.each do |highlight| %>
-        <p><%= highlight.category %></p>
+        <p><%= highlight.highlight_category %></p>
         <p><%= highlight.place %></p>
     <% end %>
 
