--- a/app/views/trips/show_trip.erb
+++ b/app/views/trips/show_trip.erb
@@ -1,11 +1,13 @@
 <!--- Shows a single trip --->
+<p><%= @trip.trip_title %></p>
 <p><%= @trip.country %></p>
 <p><%= @trip.city %></p>
 <p><%= @trip.date_visited %></p>
 <p><%= @trip.category %></p>
     <% @trip.highlights.each do |highlight| %>
-        <p><%= highlight.category %></p>
+        <p><%= highlight.highlight_category %></p>
         <p><%= highlight.place %></p>
+        <p><%= highlight.notes %></p>
     <% end %>
 
 <form method="post" action="/trips/<%= @trip.id %>">
