Edit homepage CSS

--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,2 +1,15 @@
-<h1>Welcome</h1>
-<h2>To participate please <a href="/login">Log In</a> or <a href="/signup">Sign up</a>
+<div class="top_nav">
+    <a href="/login">Log In</a>
+    <a href="/signup">Sign up</a>
+</div>
+
+<div class="title_container">
+    <%# <p class="home_page_title">welcome to</p><br> %>
+    <p class="home_page_subtitle">Travel Tracker</p>
+</div>
+
+<div class="hero_container">
+<img src="/assets/images/hero.jpg" alt="Travel Tracker Hero">
+<p class="homepage_text">Sign up or Login to start tracking your travel adventures</p>
+</div class="hero_container">
+
