--- a/app/views/highlights/edit.erb
+++ b/app/views/highlights/edit.erb
@@ -5,7 +5,7 @@
         <p><%= @highlight.notes %></p>
 
 
-<form action="/trips/<%= @trip.id%>/<%= @highlight.id%> method="post">
+<form action="/trips/<%= @trip.id%>/<%= @highlight.id %>" method="post">
     <input id="hidden" type="hidden" name="_method" value="patch">
     
     <label>Highlight Category</label>
@@ -18,6 +18,10 @@
 
     <label>Place</label>
     <input type="text" name="place"><br>
+
+    <% if @failed_place %>
+      <p class="danger">Don't forget to include the name of the place!</p>
+        <% end %>
     
     <label>Notes</label>
     <textarea name="notes" rows="4" cols="30" ></textarea><br>
