--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -7,11 +7,11 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Document</title>
   <link rel="stylesheet" href="css/style.css">
+  <link href="https://fonts.googleapis.com/css?family=Amatic+SC:700|Red+Hat+Text&display=swap" rel="stylesheet">
 
 </head>
 
 <body>
-    <h1>Heading (from layout.erb)</h1>
     <% if logged_in? %>
       <a href="/trips">All Trips</a>
       <a href="/<%= current_user.id %>/trips">Your Trips</a>
