Add button styling

--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -4,12 +4,11 @@
 </div>
 
 <div class="title_container">
-    <%# <p class="home_page_title">welcome to</p><br> %>
     <p class="home_page_subtitle">Travel Tracker</p>
 </div>
 
 <div class="hero_container">
 <img src="/assets/images/hero.jpg" alt="Travel Tracker Hero">
 <p class="homepage_text">Sign up or Login to start tracking your travel adventures</p>
-</div class="hero_container">
+</div>
 
