Add sorting feature

--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,14 +1,14 @@
-<div class="top_nav">
+<div class="index_nav">
     <a href="/login">Log In</a>
     <a href="/signup">Sign up</a>
 </div>
 
 <div class="title_container">
-    <p class="home_page_subtitle">Travel Tracker</p>
+    <p class="index_title">Travel Tracker</p>
 </div>
 
 <div class="hero_container">
 <img src="/assets/images/hero.jpg" alt="Travel Tracker Hero">
-<p class="homepage_text">Sign up or Login to start tracking your travel adventures</p>
+<p class="index_text">Sign up or Login to start tracking your travel adventures</p>
 </div>
 
