--- a/app/views/trips/new.erb
+++ b/app/views/trips/new.erb
@@ -21,10 +21,10 @@
     <label>City<label>
     <input type="text" name="city"><br>
 
-    <label>Date Visited</label>
-    <input type="text" name="date_visited"><br>
-      <% if @failed_date_visited %>
-        <p class="danger">Don't forget to include the date you went on this trip!</p>
+    <label>Year Visited</label>
+    <input type="text" name="year_visited"><br>
+      <% if @failed_year_visited %>
+        <p class="danger">Don't forget to include the year you went on this trip!</p>
       <% end %>
     
   
