--- a/app/views/trips/show_trip.erb
+++ b/app/views/trips/show_trip.erb
@@ -2,7 +2,7 @@
 <p><%= @trip.trip_title %></p>
 <p><%= @trip.country %></p>
 <p><%= @trip.city %></p>
-<p><%= @trip.date_visited %></p>
+<p><%= @trip.year_visited %></p>
 <p><%= @trip.category %></p>
     <% @trip.highlights.each do |highlight| %>
         <p><%= highlight.highlight_category %></p>
