--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -6,18 +6,19 @@
   <meta name="viewport" content="width-device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Document</title>
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="/css/style.css">
   <link href="https://fonts.googleapis.com/css?family=Amatic+SC:700|Red+Hat+Text&display=swap" rel="stylesheet">
 
 </head>
 
 <body>
     <% if logged_in? %>
+    <div class="logged_in_nav">
       <a href="/trips">All Trips</a>
-      <a href="/<%= current_user.id %>/trips">Your Trips</a>
+      <a href="/home">Your Trips</a>
       <a href="/trips/new">New Trip</a>
       <a href="/logout">Logout</a>
-
+    </div>
      <% end %> 
     <%= yield %>
 </body>
