--- a/app/views/trips/index.erb
+++ b/app/views/trips/index.erb
@@ -3,7 +3,7 @@
 <% @trips.each do |trip| %>
     <p><%= trip.country %></p>
     <p><%= trip.city %></p>
-    <p><%= trip.date_visited %></p>
+    <p><%= trip.year_visited %></p>
     <p><%= trip.category %></p>
     <% trip.highlights.each do |highlight| %>
         <p><%= highlight.highlight_category %></p>
