--- a/public/css/style.css
+++ b/public/css/style.css
@@ -14,13 +14,13 @@ html {
     background-color: white;
 }
 
-.homepage_text {
+.index_text {
     text-align: center;
     font-family: 'Red Hat Text', sans-serif;
     color: #3C5466;
 }
 
-img {
+.hero_container img {
     width: 800px;
     height: 400px;
     display: block;
@@ -34,15 +34,8 @@ img {
     clear: right;
 }
 
-.home_page_title {
-    text-align: center;
-    font-family: 'Red Hat Text', sans-serif;
-    display: inline-block;
-    color: #3C5466;
 
-}
-
-.home_page_subtitle {
+.index_title {
     text-align: center;
     font-family: 'Amatic SC', cursive;
     font-size: 75px;
@@ -54,7 +47,7 @@ img {
 
 }
 
-.top_nav a {
+.index_nav a {
     float: left;
     color: #3C5466;
     text-align: center;
@@ -65,7 +58,7 @@ img {
     padding-right: 10px;
 }
 
-.top_nav {
+.index_nav {
     float: right
 }
 
@@ -73,42 +66,226 @@ img {
     width: 400px;
     color: #3C5466;
     margin: 0 auto;
-    padding: 70px 0; 
+    padding: 30px 0; 
+
 }
 
-input {
+.login_form {
+    text-align: center;
+}
+
+.login_form input {
     padding: 5px 10px;
-    margin: 10px 8px 0;
+    margin: 5px 0;
     border-radius: 5px;
     box-sizing: border-box;
+    display: inline-block;
     width: 50%;
 }
 
-label, input {
+.login_form label {
+    width: 32%;
+    font-family: 'Red Hat Text', sans-serif;
+    font-size: 20px;
+    text-align: left;
     display: inline-block;
 }
 
-label {
-    width: 32%;
-    text-align: right;
-    font-family: 'Red Hat Text', sans-serif;
-    font-size: 20px;
-}
-
-.submit_button {
-    margin-right: 53px;
-    text-align: right;
+.sessions_button {
+    text-align: center;
 } 
 
 input[type=submit] {
     background-color: #78A1BB;
     color: white;
     font-size: 20px;
+    width: 85%;
 }
 
 input[type=submit]:focus {
     outline: none;
 }
+
+.logged_in_nav {
+    float: right
+}
+
+ .logged_in_nav a {
+    float: left;
+    color: #3C5466;
+    text-align: center;
+    text-decoration: none;
+    padding-right: 10px;
+    font-family: 'Red Hat Text', sans-serif;
+}
+
+.homepage {
+    font-family: 'Red Hat Text', sans-serif;
+    text-align: center;
+}
+
+.homepage_container {
+    margin: 0 auto;
+    width: 800px;
+    height: 400px;
+    padding: 40px 0;    
+    background-color: white;
+}
+
+.welcome_message {
+    font-family: 'Red Hat Text', sans-serif;
+    text-align: center;
+    font-size: 50px;
+}
+
+.grid {
+    /*Grid Fallback */
+    clear: right;
+    display: flex;
+    flex-wrap: wrap;
+
+    /*Browser support grid */
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+    grid-auto-rows: minmax(150px, auto);
+    grid-gap: 1em;
+}
+
+.module {
+    /* Demo-Specific Styles */
+    background: white;
+    /* display: flex; */
+    /* align-items: center; */
+    height: 300px;
+    font-family: 'Red Hat Text', sans-serif;
+    color: #3C5466;
+    line-height: 85%;
+    padding-left: 10px;
+    padding-top: 10px;
+    padding-right: 15px;
     
+    /* Flex Fallback */
+    margin-left: 5px;
+    margin-right: 5px;
+    flex: 1 1 200px;
+}
+
+.grid .label {
+    font-weight: bold;
+    line-height: 10px;
+
+}
+
+.grid h4 {
+    text-align: center;
+}
+
+/* If Grid is supported, remove the margin we set for the fallback */
+@supports (display: grid) {
+    .module {
+      margin: 0;
+    }
+  }  
+
+.grid img {
+    width: 32px;
+    height: 32px;
+    float: left;
+    padding-right: 10px;
+    padding-bottom: 10px;
+}
+
+.grid .module .box {
+    display: flex;
+    align-items: center;
+    padding-top: 20px;
+    padding-left: 10px;
+}
+
+.grid .module .view_trip {
+    text-align: right;
+}
+
+.grid .module .view_trip button {
+    background-color: #78A1BB;
+    color: white;
+    border-radius: 4px;
+    font-family: 'Red Hat Text', sans-serif;
+    font-size: 18px;
+    border: none;
+}
+
+.grid .module .view_trip button:focus {
+    outline: none;
+}
 
 
+.grid .module h4 {
+    line-height: 0px;
+    font-size: 18px;
+}
+
+.homepage_buttons {
+    text-align: center;
+}
+
+.homepage_buttons button {
+    background-color: #78A1BB;
+    color: white;
+    border-radius: 4px;
+    font-family: 'Red Hat Text', sans-serif;
+    font-size: 18px;
+    border: none;
+}
+
+.homepage_buttons .top_button {
+    text-align: center;
+    height: 50px;
+}
+
+.middle_button {
+   text-align: center;
+   height: 50px;
+}
+
+.bottom_button {
+    text-align: center;
+}
+
+
+.sort_text {
+    width: 345px;
+    line-height: 0px;
+    padding-bottom: 1px;
+    font-family: 'Amatic SC', cursive;
+    color: #3C5466;
+    font-size: 25px;
+    position: relative;
+    top: 50px;
+    bottom: 50px;
+}
+.sort_menu {
+    overflow: hidden;
+    background-color: #93B7BE;
+    font-family: 'Red Hat Text', sans-serif;
+    width: 285px;
+    float: right;
+    margin-bottom: 10px;
+  }
+
+.sort_menu_container {
+    width: 345px;
+}
+  
+  .sort_menu a {
+    float: left;
+    font-size: 16px;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+  }
+  
+  .selected {
+    background-color: #DB7F8E
+  }
