--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -9,6 +9,7 @@
 
 <div class="hero_container">
 <img src="/assets/images/hero.jpg" alt="Travel Tracker Hero">
-<p class="index_text">Sign up or Login to start tracking your travel adventures</p>
+<p class="index_text"><a href="/signup">Sign up</a> or <a href="/login">Login</a> to start tracking your travel adventures</p>
 </div>
+
 
