--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -14,8 +14,7 @@
 <body>
     <% if logged_in? %>
     <div class="logged_in_nav">
-      <a href="/trips">All Trips</a>
-      <a href="/home">Your Trips</a>
+      <a href="/trips">Your Trips</a>
       <a href="/trips/new">New Trip</a>
       <a href="/logout">Logout</a>
     </div>
