--- a/app/views/highlights/edit.erb
+++ b/app/views/highlights/edit.erb
@@ -1,35 +1,70 @@
-<h3> Edit Highlight</h3>
+<div class= "show_trip_header">
+</div>
+<div class="show_trip_container">
 
-        <p><%= @highlight.highlight_category %></p>
-        <p><%= @highlight.place %></p>
-        <p><%= @highlight.notes %></p>
+<div class="show_trip_table">
+  <div class="title">
+  <p><%= @trip.trip_title %></p>
+  </div>
 
+<div class="row">
+
+  <div class="column">
+    <p><img style="vertical-align:middle" src="/assets/images/country.png" alt="Country Icon"><label>Country: </label><%= @trip.country %></p>
+  </div>
+  
+  <div class="column">
+    <p><img style="vertical-align:middle" src="/assets/images/city.png" alt="City Icon"><label>City: </label><%= @trip.city %></p>
+  </div>
+
+  <div class="column">
+    <p><img style="vertical-align:middle" src="/assets/images/calendar.jpg" alt="Calendar Icon"><label>Year: </label><%= @trip.year_visited %></p>
+  </div>
+
+  <div class="column">
+    <p><img style="vertical-align:middle" src="/assets/images/heart-icon.png" alt="Heart Icon"><label>Type: </label><%= @trip.category %></p>
+  </div>
+
+</div>
+</div>
+</div>
+
+
+
+<div class="create_highlight_form">
+<div class="create_highlight_form_table">
+<table>
 
 <form action="/trips/<%= @trip.id%>/<%= @highlight.id %>" method="post">
     <input id="hidden" type="hidden" name="_method" value="patch">
-    
-    <label>Highlight Category</label>
-    <select name="highlight_category">
-    <option value="Food and Drinks">Food & Drinks</option>
-    <option value="Landmark">Landmark</option>
-    <option value="Transportation">Transportation</option>
-    <option value="Shopping">Shopping</option>
-    </select>
+<tr>
+    <td><label>Place:</label>
+    <input type="text" name="place" value="<%= @highlight.place %>"></td>
 
-    <label>Place</label>
-    <input type="text" name="place"><br>
-
-    <% if @failed_place %>
+     <% if @failed_place %>
       <p class="danger">Don't forget to include the name of the place!</p>
         <% end %>
-    
-    <label>Notes</label>
-    <textarea name="notes" rows="4" cols="30" ></textarea><br>
 
-    <input type="submit" value="Edit Highlight">
-</form>
+    <td><label>Notes:</label>
+    <textarea maxlength="300" name="notes"><%= @highlight.notes %></textarea></td>
+</tr>
+    <input type="hidden" name="trip_id" value="<%= @trip.id %>">
+</table>
 
-<form method="post" action="/trips/<%= @trip.id %>/<%= @highlight.id %>">
-  <input id="hidden" type="hidden" name="_method" value="DELETE">
-  <input type="submit" value="Delete Highlight">
-</form>
+<div class="button_holder">
+<div class="save_highlight">
+    <input type="submit" value="Save Highlight">
+  </form>
+</div>
+
+  <div class="delete">
+    <form method="post" action="/trips/<%= @trip.id %>/<%= @highlight.id %>">
+    <input id="hidden" type="hidden" name="_method" value="DELETE">
+    <input type="submit" value="Delete Highlight">
+  </form>
+</div>
+</div>
+
+
+  </div>
+  </div>
