--- a/app/views/trips/show_trip.erb
+++ b/app/views/trips/show_trip.erb
@@ -68,7 +68,7 @@
     <p><span class="label">Place: </span><%= highlight.place %></p><br>
     </div>
 
-    <div class="notes_box">
+    <div class="notes">
     <img src="/assets/images/notes.png" alt="Notes Icon">
     <p><span class="label">Notes: </span><span class="notes"><%= highlight.notes %></span></p>
     </div>
