Fix user associations

--- a/app/views/trips/show_all_trips.erb
+++ b/app/views/trips/show_all_trips.erb
@@ -29,7 +29,7 @@
 </div>
 
 <div class="grid">
-<% if @trips == nil %>
+<% if @trips == [] %>
 
 <% elsif @trips.length > 1 %>
   <% @trips.each do |trip| %>
