--- a/app/views/highlights/new.erb
+++ b/app/views/highlights/new.erb
@@ -20,7 +20,7 @@
   </div>
 
   <div class="column">
-    <p><img style="vertical-align:middle" src="/assets/images/calendar.jpg" alt="Calendar Icon"><label>Year: </label><%= @trip.year_visited %></p>
+    <p><img style="vertical-align:middle" src="/assets/images/calendar.jpg" alt="Calendar Icon"><label>Year: </label><%= @trip.year %></p>
   </div>
 
   <div class="column">
