--- a/app/views/trips/show_all_trips.erb
+++ b/app/views/trips/show_all_trips.erb
@@ -23,7 +23,7 @@
 <div class="filter_menu">
   <a class="<%= if @status == nil then 'selected' end%>" href="/trips">All Trips</a>
   <a class="<%= if @status == 'pasttrips' then 'selected' end%>" href="/trips?status=pasttrips">Past Trips</a>
-  <a class="<%= if @status == 'wishlist' then 'selected' end%>" href="/trips?status=wishlist">Wishlist</a>
+  <a class="<%= if @status == 'wishlist' then 'selected' end%>" href="/trips?status=wishlist">Future Trips</a>
   </p>
 </div>
 </div>
