--- a/public/css/style.css
+++ b/public/css/style.css
@@ -591,7 +591,7 @@ input[type=submit]:focus {
     padding-left: 0px;
 }
 
-.edit_trip_table .column input[type=text], select[name=country], select[name=category], .edit_trip_table select[name=year_visited] {
+.edit_trip_table .column input[type=text], select[name=country], select[name=category], .edit_trip_table select[name=year] {
     width: 50%;
     padding-left: 5px;
     font-family: 'Red Hat Text', sans-serif;
