Change year to integer

--- a/app/views/trips/new.erb
+++ b/app/views/trips/new.erb
@@ -311,7 +311,7 @@
     <option disabled selected value> -- select a year -- </option>
       <% x = Time.now.year %> 
       <% for i in x.downto(1980) do %>
-    <option value=<%= i %>><%= i %></option>
+    <option value="<%= i %>"><%= i %></option>
     <% end %>
     </select> 
 </div>
