--- a/app/views/trips/show_all_trips.erb
+++ b/app/views/trips/show_all_trips.erb
@@ -48,7 +48,7 @@
 
     <div class="box">
     <img src="/assets/images/calendar.jpg" alt="Calendar Icon">
-    <p><span class="label">Year: </span></p><br>
+    <p><span class="label">Year: </span><%= trip.year %></p><br>
     </div>
 
     <div class="view_trip">
