--- a/app/views/trips/edit.erb
+++ b/app/views/trips/edit.erb
@@ -45,7 +45,7 @@
     <select name="category">
     <option disabled selected value> -- select a type -- </option>
     <option value="Past Trip">Past Trip</option>
-    <option value="Wishlist">Wishlist</option>
+    <option value="Future Trip">Future Trip</option>
     </select>
   </div>
   
