--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -5,6 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width-device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <meta name='csrf-token' content='<%= session[:csrf] %>'>
   <title>Document</title>
   <link rel="stylesheet" href="/css/style.css">
   <link href="https://fonts.googleapis.com/css?family=Amatic+SC:700|Red+Hat+Text&display=swap" rel="stylesheet">
